fix: hopefully fix scrolling issue on IOS again

--- a/src/components/common/Layout/hide-overflow.css
+++ b/src/components/common/Layout/hide-overflow.css
@@ -1,3 +1,10 @@
-html, body {
-    overflow-x:hidden;
+html {
+    height  : 100%;
+    overflow: hidden;
+    position: relative;
+}
+body {
+    height  : 100%;
+    overflow-x: hidden;
+    position: relative;
 }
